website.feat: allow custom channels by putting channel: id at the top website.fix: align input and button

--- a/website/css/common.css
+++ b/website/css/common.css
@@ -96,7 +96,6 @@ textarea{
     border-radius: 5px;
     outline: none;
     background-color: #ffffff22;
-    width: 50vw;
 
 }
 
